--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ readthedocs-sphinx-search==0.3.1
 sphinx==5.3.0
 sphinx-copybutton==0.5.2
 sphinx-hoverxref==1.3.0
-sphinx_design==0.4.1
+sphinx_rtd_theme==1.1.1
 jinja2==3.1.2
